fix(checkout/review): align button on mobile

--- a/src/components/PaymentReviewCard/styles.module.scss
+++ b/src/components/PaymentReviewCard/styles.module.scss
@@ -168,7 +168,7 @@
     &::after {
       content: '';
       background-color: $theme-palette-secondary;
-      height: 5.6875rem;
+      height: 7rem;
       position: absolute;
       z-index: -1;
       bottom: 0;
